--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,15 @@
 STAGE=dev
+IS_DEBUG=true
 # Database
 POSTGRESQL_HOST=localhost
-POSTGRESQL_USERNAME=boilerplate-db-user
+POSTGRESQL_USERNAME=boilerplate-db
 POSTGRESQL_PASSWORD=rockstrongpassword!
 POSTGRESQL_DB=boilerplate-db
 POSTGRESQL_PORT=54324
+POSTGRESQL_SSL_MODE=disabled
 POSTGRESQL_CONTAINER_INTERNAL_PORT=5432
 POSTGRES_MOUNT_PATH=/Users/amanangira/www/docker/mounts/boiler-plate-db-user
 
 # amacneil/dbmate
-DATABASE_URL=postgres://boilerplate-db-user:rockstrongpassword!@localhost:54324/boilerplate-db?sslmode\=disable
+DATABASE_URL=postgres://boilerplate-db-user:rockstrongpassword!@localhost:54324/localhost?sslmode=disable
 DBMATE_MIGRATIONS_DIR=db/migrations
